# quranbot-admin

./: .editorconfig  .env.example  .gitignore  .gitlab-ci.yml  .gitmodules  Cargo.toml  Dockerfile  Gemfile  Makefile  README.md  docker-compose.yml  go.mod  manage.py  pyproject.toml  setup.cfg  yoyo.ini
.github/: .ci.env
.github/workflows/: pr-check.yml  python-app.yml  release.yml
.sqlx/: query-8774d93be08fcdf2bb771ba83b9334c28890b2b7eb9c9308b2160b6e8b04e045.json
app/views/layouts/: application.html.erb
config/: .env.template  application.rb  cable.yml  credentials.yml.enc
config/environments/: production.rb
deploy/: Dockerfile  qbot_admin_nginx.conf  quranbot_admin_receiver_supervisor.conf  quranbot_admin_supervisor.conf  quranbot_nginx.conf  restart.sh
docker/: docker-compose.prod.yml
docker/django/: Dockerfile  ci.sh  gunicorn_config.py
docs/: Makefile
migrations/: 20230902_01_QkBQH-init-schema.rollback.sql  20230902_01_QkBQH-init-schema.sql  20230905_01_SGkme-files-filename-column.rollback.sql  20230905_01_SGkme-files-filename-column.sql
scripts/: create_dev_database.sql
server/: urls.py  wsgi.py
server/apps/: __init__.py
server/apps/main/: __init__.py  models.py  urls.py  views.py
server/apps/main/logic/: __init__.py
server/apps/main/management/commands/: receive_events.py
server/apps/main/migrations/: 0001_initial.py  0002_alter_ayat_day.py  0002_alter_user_day_alter_user_is_active_and_more.py  0002_callbackdata.py  0003_alter_ayat_public_id.py  0003_alter_user_city.py  0003_message_trigger_callback_id.py  0004_alter_user_password.py  0004_alter_user_referrer_id.py  0004_mailing_message_user_message_mailing.py  0005_alter_message_mailing.py  0005_alter_user_username.py  0005_remove_message_user_message_from_id.py  __init__.py
server/apps/main/templates/main/: ayat_detail.html  ayat_detail_form.html  ayats.html  ayats_list.html  days.html  days_form.html  failed_events.html  failed_events_table.html  index.html  landing.html  login.html  login_form.html  mailings_content.html  mailings_page.html  message_detail.html  messages_content.html  messages_page.html  new_mailing_form.html  new_mailing_page.html  pagination.html  users_content.html  users_page.html
server/apps/main/templates/main/ayats/: ayat_detail.html  ayats.html
server/apps/main/templatetags/: __init__.py  build_url.py  date_time.py
server/settings/: __init__.py
server/settings/components/: __init__.py  caches.py  common.py  csp.py  logging.py
server/settings/environments/: development.py  production.py
server/templates/: admin_layout.html  base.html
server/templates/txt/: humans.txt
src/: caching.py  cli.py  conftest.py  constants.py  db.py  exceptions.py  logging_settings.py  main.py  main.rs  settings.py
src/app_types/: query.py  stringable.py
src/cmd/: main.go
src/db/: base.py  connection.py  meta.py
src/db/migrations/: env.py
src/db/migrations/versions/: 2022_08_30_21_32_5441d86e80de.py  2022_09_01_22_16_f6ef093494b4.py  2022_09_02_14_25_794cd0860941.py
src/db/models/: ayat.py  city.py  file.py  message.py  sura.py  user.py  user_action.py
src/handlers/: registration_handlers.py  websockets.py
src/handlers/v1/: ayats.py  daily_content.py  mailings.py  messages.py
src/handlers/v1/schemas/: auth.py  ayats.py  daily_content.py  files.py  messages.py  notifications.py  users.py
src/handlers/v1/views/: auth.py  ayats.py  daily_content.py  debug.py  files.py  mailings.py  messages.py  notification.py  users.py
src/integrations/: client.py  html_page.py  queue_integration.py  umma.py
src/integrations/event_handlers/: message_created.py  notification_created.py  user_reactivated.py  user_subscribed.py  user_subscribed_with_referrer.py  user_unsubscribed.py
src/repositories/: auth.py  ayat.py  file.py  messages.py  notification.py  paginated_sequence.py  storage.py  user_action.py
src/services/: auth.py  ayat_detail_response.py  ayats.py  ayats_count.py  ayats_paginated_response.py  date_range.py  dates_iterator.py  empty_graphe_item_fill.py  file.py  files_paginated_response.py  last_content_day.py  limit_offset_by_page_params.py  mailing.py  messages.py  new_daily_content.py  paginating.py  pg_ayats_list.py  pg_files_list.py  start_date_dependency.py  user_count_graph_data.py  websocket_user.py
src/templates/: websocket_ui.html
src/tests/: test_ayats.py  test_dates_iterator.py  test_get_date_range_dependency.py  test_graph_zero_value_save.py  test_mailings.py  test_messages.py  test_messages_graph.py  test_prev_page.py
src/tests/event_handlers/: test_reactivate.py  test_unsubscribe.py
src/tests/fixtures/: ayats_dump.sql  db_schema.sql
src/tests/handlers/: test_auth.py  test_ayats.py  test_daily_content.py  test_files.py  test_mailings.py  test_messages.py  test_messages_graph.py  test_notifications.py  test_users_count.py
src/tests/integration/: conftest.py  creating_test_db.py  test_auth.py  test_ayat_list.py  test_ayat_repository.py  test_elements_count.py  test_user_repository.py
src/tests/it/: conftest.py  creating_test_db.py  test_auth.py  test_ayat_detail.py  test_ayat_list.py  test_daily_content.py  test_files.py
src/tests/plugins/: db.py
src/tests/quran_parser/: test_parsed_preloaded_state_string.py  test_sura_pages.py
src/tests/quran_parser/fixtures/: perevod-korana.html  preloaded_state_string.txt
tests/: conftest.py  test_server.py
tests/e2e/: test_messages_list.py
tests/plugins/: django_settings.py
tests/plugins/main/: main_templates.py
tests/test_apps/test_main/: test_templates.py
tests/test_apps/test_main/test_commands/: test_receive_events.py
tests/test_apps/test_main/test_models/: test_models.py
tests/test_apps/test_main/test_views/: test_ayat_detail.py  test_ayat_list.py  test_days.py  test_failed_events.py  test_index_view.py  test_login.py  test_mailings.py  test_messages.py  test_users.py
tests/test_server/: test_ayat_list.py  test_urls.py
