[tool.poetry]
name = "quranbot-admin"
version = "0.1.0"
description = ""
authors = ["Almaz Ilaletdinov <a.ilaletdinov@yandex.ru>"]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fastapi = "0.109.0"
uvicorn = "0.25.0"
pydantic = {extras = ["dotenv"], version = "^1.9.1"}
loguru = "0.7.2"
PyPika = "0.48.9"
bcrypt = "4.1.2"
passlib = "1.7.4"
python-jose = "3.3.0"
python-multipart = "0.0.6"
quranbot-schema-registry = "0.0.20"
redis = "5.0.1"
websockets = "11.0.3"
Jinja2 = "3.1.3"  # remove after writing ui
databases = {extras = ["asyncpg"], version = "0.8.0"}
aiofiles = "23.2.1"
httpx = "0.26.0"
eljson = "0.0.1a1"
aioamqp = "0.15.0"
greenlet = "3.0.3"

[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = { git= "https://github.com/wemake-services/wemake-python-styleguide", branch = "master" }
ipython = "8.20.0"
mypy = "1.8.0"
asyncpg-stubs = "0.29.1"
Faker = "19.13.0"
pytest-cov = "4.1.0"
pytest = "7.4.4"
pytest-asyncio = "0.23.3"
types-aiofiles = "23.2.0.20240106"
requests = "2.31.0"
yoyo-migrations = "8.2.0"
psycopg2 = "2.9.9"
pika = "1.3.2"
pytest-freezer = "0.4.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
skip-string-normalization = true
